Added SQLite database support, and save gun states when the server shuts down