@@ -3,6 +3,7 @@ package nl.matsgemmeke.battlegrounds;
 import co.aikar.commands.PaperCommandManager;
 import com.google.inject.Guice;
 import com.google.inject.Injector;
+import com.j256.ormlite.logger.Level;
 import nl.matsgemmeke.battlegrounds.command.*;
 import nl.matsgemmeke.battlegrounds.command.condition.ExistentSessionIdCondition;
 import nl.matsgemmeke.battlegrounds.command.condition.ExistentWeaponIdCondition;
@@ -11,6 +12,7 @@ import nl.matsgemmeke.battlegrounds.command.condition.OpenModePresenceCondition;
 import nl.matsgemmeke.battlegrounds.event.EventDispatcher;
 import nl.matsgemmeke.battlegrounds.event.handler.*;
 import nl.matsgemmeke.battlegrounds.event.listener.EventListener;
+import nl.matsgemmeke.battlegrounds.game.GameContextProvider;
 import org.bukkit.event.block.BlockBurnEvent;
 import org.bukkit.event.block.BlockSpreadEvent;
 import org.bukkit.event.entity.EntityDamageByEntityEvent;
@@ -24,6 +26,7 @@ import java.util.logging.Logger;
 
 public class BattlegroundsPlugin extends JavaPlugin {
 
+    private GameContextProvider contextProvider;
     private Injector injector;
     private InternalsProvider internals;
     private Logger logger;
@@ -46,13 +49,20 @@ public class BattlegroundsPlugin extends JavaPlugin {
         logger.info("Successfully started Battlegrounds v" + this.getDescription().getVersion());
     }
 
+    @Override
+    public void onDisable() {
+        contextProvider.shutdown();
+    }
+
     private void startPlugin() throws StartupFailedException {
         this.setUpInternalsProvider();
+        this.setUpLogging();
 
         File dataFolder = this.getDataFolder();
         BattlegroundsModule module = new BattlegroundsModule(dataFolder, internals, this, pluginManager);
 
         injector = Guice.createInjector(module);
+        contextProvider = injector.getInstance(GameContextProvider.class);
 
         this.setUpEventHandlers();
         this.setUpCommands();
@@ -101,10 +111,17 @@ public class BattlegroundsPlugin extends JavaPlugin {
     private void setUpInternalsProvider() throws StartupFailedException {
         try {
             String packageName = BattlegroundsPlugin.class.getPackage().getName();
-            String internalsName = getServer().getClass().getPackage().getName().split("\\.")[3];
-            internals = (InternalsProvider) Class.forName(packageName + ".nms." + internalsName + "." + internalsName.toUpperCase()).newInstance();
+            String internalsName = this.getServer().getClass().getPackage().getName().split("\\.")[3];
+            String className = packageName + ".nms." + internalsName + "." + internalsName.toUpperCase();
+
+            internals = (InternalsProvider) Class.forName(className).getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new StartupFailedException("Failed to find a valid implementation for this server version");
         }
+    }
+
+    private void setUpLogging() {
+        // Disable ORMLite logs
+        com.j256.ormlite.logger.Logger.setGlobalLogLevel(Level.ERROR);
     }
 }
